--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,9 @@
   color: #61dafb;
 }
 
+.rank_name {
+  font-size: clamp(1rem, 4vw, 1.5rem);
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
