--- a/src/Components/ImageLinkForm/Image.css
+++ b/src/Components/ImageLinkForm/Image.css
@@ -46,3 +46,11 @@
     linear-gradient(90deg, #b71 2%, #fb1 0, #fb1 98%, #b71 0%) 0 0 #fb1;
   background-size: 40px 60px;
 }
+
+.ImageLinkForm_text {
+  font-size: clamp(1.2rem, 3.5vw, 2rem);
+}
+
+.ImageLinkForm_btn {
+  font-size: clamp(0.8rem, 4vw, 1.5rem);
+}
